--- a/Netflix/Netflix.csproj
+++ b/Netflix/Netflix.csproj
@@ -80,6 +80,9 @@
 	  <MauiXaml Update="Pages\CategoriePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\DetailsPag.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
